After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 783756 - crash when using the smart bookmarks
crash when using the smart bookmarks
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: History
unspecified
Other Linux
: Normal critical
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-06-13 15:03 UTC by Xabier Rodríguez Calvar
Modified: 2018-04-03 21:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gdb bt full (19.48 KB, text/plain)
2018-04-03 05:37 UTC, Kai Lüke
  Details
location-controller: Don't crash when completion index is invalid (1.98 KB, patch)
2018-04-03 21:53 UTC, Michael Catanzaro
committed Details | Review

Description Xabier Rodríguez Calvar 2017-06-13 15:03:40 UTC


  • #0 g_str_hash
    at /home/calvaris/gnome/jhbuild/build/src/glib/glib/ghash.c line 1882
  • #1 g_hash_table_lookup_node
    at /home/calvaris/gnome/jhbuild/build/src/glib/glib/ghash.c line 379
  • #2 g_hash_table_lookup
    at /home/calvaris/gnome/jhbuild/build/src/glib/glib/ghash.c line 1153
  • #3 ephy_search_engine_manager_build_search_address
    at ../../../src/epiphany/lib/ephy-search-engine-manager.c line 329
  • #4 action_activated_cb
    at ../../../src/epiphany/src/ephy-location-controller.c line 308
  • #5 g_closure_invoke
    at /home/calvaris/gnome/jhbuild/build/src/glib/gobject/gclosure.c line 804
  • #6 signal_emit_unlocked_R
    at /home/calvaris/gnome/jhbuild/build/src/glib/gobject/gsignal.c line 3635
  • #7 g_signal_emit_valist
    at /home/calvaris/gnome/jhbuild/build/src/glib/gobject/gsignal.c line 3391
  • #8 g_signal_emit_by_name
    at /home/calvaris/gnome/jhbuild/build/src/glib/gobject/gsignal.c line 3487
  • #9 gtk_entry_completion_key_press
    at /home/calvaris/gnome/jhbuild/build/src/gtk+-3/gtk/gtkentrycompletion.c line 2491
  • #10 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 91
  • #11 g_closure_invoke
    at /home/calvaris/gnome/jhbuild/build/src/glib/gobject/gclosure.c line 804
  • #12 signal_emit_unlocked_R
    at /home/calvaris/gnome/jhbuild/build/src/glib/gobject/gsignal.c line 3635
  • #13 g_signal_emit_valist
    at /home/calvaris/gnome/jhbuild/build/src/glib/gobject/gsignal.c line 3401
  • #14 g_signal_emit
    at /home/calvaris/gnome/jhbuild/build/src/glib/gobject/gsignal.c line 3447
  • #15 gtk_widget_event_internal
    at /home/calvaris/gnome/jhbuild/build/src/gtk+-3/gtk/gtkwidget.c line 7723
  • #16 gtk_entry_completion_popup_key_event
    at /home/calvaris/gnome/jhbuild/build/src/gtk+-3/gtk/gtkentrycompletion.c line 924
  • #17 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 91
  • #18 g_closure_invoke
    at /home/calvaris/gnome/jhbuild/build/src/glib/gobject/gclosure.c line 804
  • #19 signal_emit_unlocked_R
    at /home/calvaris/gnome/jhbuild/build/src/glib/gobject/gsignal.c line 3635
  • #20 g_signal_emit_valist
    at /home/calvaris/gnome/jhbuild/build/src/glib/gobject/gsignal.c line 3401
  • #21 g_signal_emit
    at /home/calvaris/gnome/jhbuild/build/src/glib/gobject/gsignal.c line 3447
  • #22 gtk_widget_event_internal
    at /home/calvaris/gnome/jhbuild/build/src/gtk+-3/gtk/gtkwidget.c line 7723
  • #23 propagate_event
    at /home/calvaris/gnome/jhbuild/build/src/gtk+-3/gtk/gtkmain.c line 2661
  • #24 gtk_main_do_event
    at /home/calvaris/gnome/jhbuild/build/src/gtk+-3/gtk/gtkmain.c line 1901
  • #25 _gdk_event_emit
    at /home/calvaris/gnome/jhbuild/build/src/gtk+-3/gdk/gdkevents.c line 73
  • #26 gdk_event_source_dispatch
    at /home/calvaris/gnome/jhbuild/build/src/gtk+-3/gdk/x11/gdkeventsource.c line 367
  • #27 g_main_dispatch
    at /home/calvaris/gnome/jhbuild/build/src/glib/glib/gmain.c line 3148
  • #28 g_main_context_dispatch
    at /home/calvaris/gnome/jhbuild/build/src/glib/glib/gmain.c line 3813
  • #29 g_main_context_iterate
    at /home/calvaris/gnome/jhbuild/build/src/glib/glib/gmain.c line 3886
  • #30 g_main_context_iteration
    at /home/calvaris/gnome/jhbuild/build/src/glib/glib/gmain.c line 3947
  • #31 g_application_run
    at /home/calvaris/gnome/jhbuild/build/src/glib/gio/gapplication.c line 2378
  • #32 main
    at ../../../src/epiphany/src/ephy-main.c line 432

Comment 1 Xabier Rodríguez Calvar 2017-06-13 15:05:34 UTC
1- typed something on the address text entry
2- tried to move to one of the supported search engines
3- crash with given backtrace
Comment 2 Michael Catanzaro 2017-06-13 15:14:02 UTC
A better backtrace would be useful. But maybe I could reproduce it if you post the contents of your search-engines GSetting.
Comment 3 Michael Catanzaro 2017-12-11 23:25:38 UTC
Closing this bug report as no further information has been provided. Please feel free to reopen this bug report if you can provide the information that was asked for in a previous comment.
Thanks!
Comment 4 Kai Lüke 2018-04-03 05:36:18 UTC
Same crash occured while entering a term in the search bar and maybe going down the list of seach engines, 0x201 is accessed as memory location.
3.28.0.1-1 (Debian sid)

gdb bt

  • #0 g_str_hash
    at ../../../../glib/ghash.c line 1894
  • #1 g_hash_table_lookup_node
    at ../../../../glib/ghash.c line 379
  • #2 g_hash_table_lookup
    at ../../../../glib/ghash.c line 1153
  • #3 ephy_search_engine_manager_build_search_address
    at ../lib/ephy-search-engine-manager.c line 344
  • #4 action_activated_cb
    at ../src/ephy-location-controller.c line 311
  • #8 <emit signal 0x7fdfb0872cf6 "action-activate"... on instance 0x56210258f740 [GtkEntryCompletion]>
    at ../../../../gobject/gsignal.c line 3487
  • #9 gtk_entry_completion_key_press
    at ../../../../gtk/gtkentrycompletion.c line 2491
  • #14 <emit signal ??? on instance 0x562102208310 [EphyLocationEntry]>
    at ../../../../gobject/gsignal.c line 3447
  • #15 gtk_widget_event_internal
    at ../../../../gtk/gtkwidget.c line 7740
  • #16 gtk_widget_event
    at ../../../../gtk/gtkwidget.c line 7310
  • #17 gtk_entry_completion_popup_key_event
    at ../../../../gtk/gtkentrycompletion.c line 924
  • #22 <emit signal ??? on instance 0x562101af47c0 [GtkWindow]>
    at ../../../../gobject/gsignal.c line 3447
  • #23 gtk_widget_event_internal
    at ../../../../gtk/gtkwidget.c line 7740
  • #24 propagate_event
    at ../../../../gtk/gtkmain.c line 2685
  • #25 gtk_main_do_event
    at ../../../../gtk/gtkmain.c line 1915
  • #26 _gdk_event_emit
    at ../../../../gdk/gdkevents.c line 73
  • #27 gdk_event_source_dispatch
    at ../../../../../gdk/wayland/gdkeventsource.c line 124
  • #28 g_main_dispatch
    at ../../../../glib/gmain.c line 3177
  • #29 g_main_context_dispatch
    at ../../../../glib/gmain.c line 3830
  • #30 g_main_context_iterate
    at ../../../../glib/gmain.c line 3903
  • #31 g_main_context_iteration
    at ../../../../glib/gmain.c line 3964
  • #32 g_application_run
    at ../../../../gio/gapplication.c line 2470
  • #33 main
    at ../src/ephy-main.c line 437
  • #34 __libc_start_main
    at ../csu/libc-start.c line 310
  • #35 _start

Comment 5 Kai Lüke 2018-04-03 05:37:07 UTC
Created attachment 370473 [details]
gdb bt full
Comment 6 Kai Lüke 2018-04-03 05:43:46 UTC
I think it was possible to enter the same string again after restarting.

Here the values (I did not maintain them in the last years).

search-engines:
[('DuckDuckGo', 'https://duckduckgo.com/?q=%s&t=epiphany', '!ddg'), ('Startpage', 'https://startpage.com/do/search?prf=b267d9fef0ffa420463ca8f11efb971f&query=%s', '!sp'), ('Bing', 'https://www.bing.com/search?q=%s', '!b'), ('Google', 'https://www.google.com/search?q=%s', '!g')]

keyword-search-url:
https://startpage.com/do/search?prf=b267d9fef0ffa420463ca8f11efb971f&query=%s

default-search-engine: Startpage
Comment 7 Michael Catanzaro 2018-04-03 21:41:03 UTC
I don't see why it's happening, but we can at least not crash when it does....
Comment 8 Michael Catanzaro 2018-04-03 21:53:25 UTC
The following fix has been pushed:
d77a228 location-controller: Don't crash when completion index is invalid
Comment 9 Michael Catanzaro 2018-04-03 21:53:30 UTC
Created attachment 370502 [details] [review]
location-controller: Don't crash when completion index is invalid

I still don't understand how this can happen, but let's avoid crashing
when it does.
Comment 10 Michael Catanzaro 2018-04-03 21:54:40 UTC
This change is right because it also avoids a crash if the search engines list is changed after the completion popup appears, but that's surely not what caused it in your case... bonus points if you can figure out why it happened.