location-controller: Don't crash when completion index is invalid

I still don't understand how this can happen, but let's avoid crashing
when it does.

https://bugzilla.gnome.org/show_bug.cgi?id=783756